kanc/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_params/heterogeneous/unlabeled_before_implicit.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

let f = fun _(x: Nat, ~y: Nat): Nat {
    Nat.o
};
